--- a/OracleJETApplication/templates/profile/payroll/payroll-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/payroll/payroll-small.tmpl.html
@@ -1,10 +1,10 @@
 <div class="justifyCenter">
     <div class="oj-row">
         <div class="oj-col oj-sm-10">
-            <h2 id="currentPage" data-bind="text: label"></h2>
+<!--            <h2 id="currentPage" data-bind="text: label"></h2>-->
         </div>
         <div class="oj-col oj-sm-2 oj-lg-text-align-end">
-            <div data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</div>
+            <button data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</button>
         </div>
     </div>
     <div class="oj-row">
