--- a/OracleJETApplication/templates/partials/employee-external-payroll-modal/employee-external-payroll-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-external-payroll-modal/employee-external-payroll-modal-small.tmpl.html
@@ -1,4 +1,6 @@
-<div style="display:none;" id="externalPayrollDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'generalModal-dimensions'}}">
+<div style="display:none;" id="externalPayrollDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', 
+                   rootAttributes: {class: 'generalModal-dimensions'},
+                  'position': {'my': 'start bottom', 'at': 'end+14 top'}}">
    <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
         <span id="dialogTitleId" class="oj-dialog-title">
            <div>External Payroll ID Modal</div>
