--- a/OracleJETApplication/templates/partials/employee-home-store-modal/employee-home-store-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-home-store-modal/employee-home-store-modal-small.tmpl.html
@@ -1,4 +1,6 @@
-<div style="display:none;" id="homeStoreDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'generalModal-dimensions'}}">
+<div style="display:none;" id="homeStoreDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', 
+                   rootAttributes: {class: 'generalModal-dimensions'}, 
+                  'position': {'my': 'start bottom', 'at': 'end+14 top'}, }">
    <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
         <span id="dialogTitleId" class="oj-dialog-title">
            <div>Home Store Modal</div>
