--- a/OracleJETApplication/templates/people.tmpl.html
+++ b/OracleJETApplication/templates/people.tmpl.html
@@ -5,9 +5,10 @@
             <div class="oj-col oj-sm-12" style="padding-top: 10px;">
                 <div class="oj-row">
                     <div id="pageTitleContainer" class="oj-col oj-sm-12">
-                        <h1 class="inlineHeader">People</h1>
+                         <h1 class="inlineHeader"><span class="fa fa-users"></span> People <span class="fa fa-question custom-question-icon"></span> </h1>
 <!--                        <a href="index.html?root=add-employee" class="basic-btn-link">Add</a>-->
-                            <a href="" data-bind="click: function(){handleOpen('#addEmpStatusDialog');}" class="basic-btn-link">Add</a>
+                            <a href="" data-bind="click: function(){handleOpen('#addEmpStatusDialog');}" class="basic-btn-link"><span class="fa fa-plus"></span> Add</a>
+                            <hr/>
                     </div>
                     <!--Use template when parent js file is associated by default to the tmpl file
                     Ex. below links to partial tmpl file, people tmpl file already associated with people.js file
@@ -31,9 +32,10 @@
             <div class="oj-col oj-sm-12" style="padding-top: 10px;">
                 <div class="oj-row">
                     <div id="pageTitleContainer" class="oj-col oj-sm-12 oj-lg-12">
-                        <h1 class="inlineHeader">People</h1>
+                        <h1 class="inlineHeader"><span class="fa fa-users"></span> People <span class="fa fa-question custom-question-icon"></span> </h1>
 <!--                        <a href="index.html?root=add-employee" class="basic-btn-link">Add</a>-->
-                            <a href="" data-bind="click: function(){handleOpen('#addEmpStatusDialog');}" class="basic-btn-link">Add</a>
+                            <a href="" data-bind="click: function(){handleOpen('#addEmpStatusDialog');}" class="basic-btn-link"><span class="fa fa-plus"></span> Add</a>
+                            <hr/>
                     </div>
                     <!--Use template when parent js file is associated by default to the tmpl file -->
                     <div data-bind="template: {name: 'partials/employee-search/employee-search-large'}"></div>
