Updated add-employee architecture into partials

--- a/OracleJETApplication/templates/people.tmpl.html
+++ b/OracleJETApplication/templates/people.tmpl.html
@@ -19,9 +19,10 @@
             </div>
         </div>
     </div>
+    <!--Using large template until mobile is provided-->
     <div data-bind="ojModule: {
-                name: 'add-employee',
-                viewName: 'add-employee/add-employee-small'}">
+                    name: 'partials/add-employee-modal',
+                    viewName: 'partials/add-employee-modal/add-employee-modal-large'}">
     </div>
 </script>
 
@@ -44,8 +45,8 @@
         </div>
     </div>
     <div data-bind="ojModule: {
-                    name: 'add-employee',
-                    viewName: 'add-employee/add-employee-large'}">
+                    name: 'partials/add-employee-modal',
+                    viewName: 'partials/add-employee-modal/add-employee-modal-large'}">
     </div>
 
 </script>
