--- a/OracleJETApplication/templates/profile/analytics/analytics-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/analytics/analytics-large.tmpl.html
@@ -1,24 +1,43 @@
 <div class="justifyCenter">
-    <div id="personaldetails" class="oj-row" style="margin-bottom:26px;">
-        <div class="oj-col oj-md-2 oj-lg-2 demo-employee-photo-person-detail">
-            <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />
+    <div class="oj-row">
+        <div class="oj-col oj-md-10">
+            <h2 id="currentPage" data-bind="text: label"></h2>
         </div>
-        <div class="oj-col oj-md-4 oj-lg-4" style="margin-top: 10px;">
-            <div data-bind="text: $parent.personProfile().firstName + ' ' + $parent.personProfile().lastName"></div>
-            <div data-bind="text: $parent.personProfile().title"></div>
-            <div data-bind="text: $parent.personProfile().deptName"></div>
+        <div class="oj-col oj-md-2 oj-lg-text-align-end">
+            <div data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</div>
         </div>
-        <div class="oj-col oj-md-4 oj-lg-4" style="margin-top: 10px;">
-            <div>
-                <div data-bind="text: $parent.personProfile().phone"></div>
+    </div>
+    <div class="oj-row">
+        <div class="oj-col oj-lg-6">
+            <div class="textbold">History</div>
+            <div id="barChart" data-bind="ojComponent: {
+                    component: 'ojChart', 
+                    type: 'bar', 
+                    selectionMode: 'none',
+                    dataCursor: 'on',
+                    orientation: $parent.orientationValue,
+                    stack: $parent.stackValue,
+                    series: $parent.barSeriesValue, 
+                    groups: $parent.barGroupsValue, 
+                    animationOnDisplay: 'auto',
+                    animationOnDataChange: 'auto',
+                    hoverBehavior: 'dimok '
+                }"
+                 style="max-width:500px;width:100%;height:350px;">
             </div>
-            <div>
-                <div data-bind="text: $parent.personProfile().mobile"></div>
-            </div>
-            <div>
-                <div>
-                    <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.personProfile().email+'@example.net'"></a>
-                </div>
+        </div>
+        <div class="oj-col oj-lg-6">
+            <div class="textbold">Current</div>
+            <div data-bind="ojComponent: {
+                    component: 'ojChart', 
+                    type: 'pie', 
+                    series: $parent.pieSeriesValue,
+                    animationOnDisplay: 'auto',
+                    animationOnDataChange: 'auto',
+                    styleDefaults: {threeDEffect: 'off'},
+                    hoverBehavior: 'dim'
+                }"
+                style="max-width:500px;width:100%;height:350px;">
             </div>
         </div>
     </div>
