add a feature from work better

--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -122,7 +122,7 @@
         <div class="oj-col oj-md-6">
             <a data-bind="click: function(){console.log($parent);}">Find me</a>
             <div class="textbold">History</div>
-<!--            <div id="barChart" data-bind="ojComponent: {
+            <div id="barChart" data-bind="ojComponent: {
                     component: 'ojChart', 
                     type: 'bar', 
                     selectionMode: 'none',
@@ -136,8 +136,24 @@
                     hoverBehavior: 'dim'
                 }"
                  style="max-width:500px;width:100%;height:350px;">
-            </div>-->
+            </div>
         </div>
+        
+        <div class="oj-col oj-md-6">
+        <!-- ko foreach: $parent.directReports -->
+            <div class="oj-col oj-lg-6" style="padding: 5px;">
+                <div class="oj-row">
+                    <div class="oj-col oj-sm-6">
+                        <img class="demo-circular demo-employee-photo" data-bind="attr: {src: $parents[1].getPhoto(empId)}"/>
+                    </div>
+                    <div class="oj-col oj-sm-6">
+                        <div class="demo-employee-name" data-bind="text: firstName + ' ' + lastName"></div>
+                        <div class="demo-employee-title" data-bind="text: title"></div>
+                        <div class="demo-employee-dept" data-bind="text: deptName"></div>
+                    </div>
+                </div>
+            </div>
+        <!-- /ko -->
     </div>
     <div class="oj-col oj-md-12 oj-lg-text-align-end">
          <a data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
