--- a/OracleJETApplication/templates/partials/add-employee-modal/add-employee-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/add-employee-modal/add-employee-modal-large.tmpl.html
@@ -1,7 +1,7 @@
 <div style="display:none;" id="addEmpStatusDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'generalModal-dimensions'}, 'position': {'at': 'top'}}">
     <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
         <span id="dialogTitleId" class="oj-dialog-title">
-           <div>Add Employee Modal</div>
+           <div><span class="fa fa-plus"></span> Add Employee Modal</div>
         </span>
     </div>
     <div class="oj-dialog-body">
@@ -25,31 +25,32 @@
 -->
                     <div id="searchEmpSection">
                         <div>
-                            <h2>Getting Started - Search Existing/Past Employees</h2>
+                            <h2>Getting Started <span class="fa fa-question custom-question-icon"></span></h2>
                             <form data-bind="submit: gettingStartedSearch">
                                 <div class="oj-row">
                                     <div class="oj-col oj-sm-3">
-                                        <label for="firstName">First Name</label>
+                                        <label for="startFirstName">First Name</label>
                                         <input id="startFirstName" data-bind="ojComponent: {component: 'ojInputText', value: firstName}" />
                                     </div>
 
                                     <div class="oj-col oj-sm-3">
-                                        <label for="lastName">Last Name</label>
+                                        <label for="startLastName">Last Name</label>
                                         <input id="startLastName" data-bind="ojComponent: {component: 'ojInputText', value: lastName}" />
                                     </div>
 
                                     <div class="oj-col oj-sm-3">
-                                        <label for="dob">Date of Birth</label>
+                                        <label for="startDob">Date of Birth</label>
                                         <input id="startDob" data-bind="ojComponent: {component: 'ojInputDate', value: dob}" />
                                     </div>
 
                                     <div class="oj-col oj-sm-3">
-                                        <label>Enterprise Level</label>
-                                        <br/>
-                                        <input data-bind="ojComponent: {component: 'ojInputText', value: enterpriseLevel, readOnly: true}" />
+                                        <label for="enterpriseLevel">Enterprise Level</label>
+                                        <input id="enterpriseLevel" data-bind="ojComponent: {component: 'ojInputText', value: enterpriseLevel, readOnly: true}" />
                                     </div>
 
-                                    <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { start: 'fa fa-search'} }, visible: continueBtnSectionState" />
+                                    <div class="button-row oj-col oj-sm-12">
+                                        <button id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { end: 'oj-fwk-icon-caret-end oj-fwk-icon'} }, visible: continueBtnSectionState"></button>
+                                    </div>
                                 </div>
                             </form>
 
@@ -67,7 +68,7 @@
                                         <div class="oj-col oj-md-3">Hire Status</div>
                                     </div>
                                 </div>
-                                <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
+                                <ul id="add-emp-modal-listview" data-bind="ojComponent: {component: 'ojListView',
                             data: listViewDataSource,
                             item: {template: 'empMatchlist_template'},
                             translations: {msgNoData: '0 Matches Found'},
@@ -89,13 +90,15 @@
                                         </div>
                                         <div class="empDetails">
                                             <div class="oj-row">
-                                                <div class="oj-col oj-sm-12 oj-md-4">
+                                                <div class="oj-col oj-sm-12 oj-md-3">
                                                     <img style="width:75px; height:75px;" data-bind="attr: {src: $parent.getPhoto($data['empId'])}" />
                                                 </div>
-                                                <div class="oj-col oj-sm-12 oj-md-4" data-bind="text: lastName"></div>
+                                                <div class="oj-col oj-sm-12 oj-md-3 tmp-data">Data</div>
+                                                <div class="oj-col oj-sm-12 oj-md-3 tmp-data">Data</div>
+                                                <div class="oj-col oj-sm-12 oj-md-3 tmp-data">Data</div>
                                             </div>
                                             <div class="oj-row">
-                                                <div class="oj-col oj-sm-12">
+                                                <div class="oj-col oj-sm-12 oj-sm-text-align-end">
                                                     <span>Hire Status Log</span>
                                                     <a href="" data-bind="click: $parent.loadPersonPage">Edit</a>
                                                 </div>
@@ -104,7 +107,9 @@
                                     </li>
                                 </script>
 
-                                <button id="addNewEmployee" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: function(){toggleSection('#newEmpAccordionSection, #searchEmpSection'), scrollTop() }, ojComponent: {component: 'ojButton', label: 'Add New Employee ', icons: {end:'oj-fwk-icon-caret-end oj-fwk-icon'}}"></button>
+                               <div class="button-row">
+                                     <button id="addNewEmployee" type="button" style="display:inline-block;vertical-align:top;" data-bind="click: function(){toggleSection('#newEmpAccordionSection, #searchEmpSection'), scrollTop() }, ojComponent: {component: 'ojButton', label: 'Add New Employee ', icons: {start:'fa fa-plus'}}"></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -116,6 +121,7 @@
                             <span data-bind="text: firstName"></span>
                             <span data-bind="text: lastName"></span>
                             <span data-bind="text: dobFormatted"></span>
+                            <span data-bind="text: enterpriseLevelFormatted"></span>
                             <a href="" data-bind="click: function(){startOver()}" class="float-r">Start Over</a>
                         </div>
                         <div id="accordionSection" data-bind="ojComponent: {component: 'ojAccordion', multiple: true}">
@@ -238,8 +244,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="editMode">
-                                        <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { start: 'fa fa-search'} }, click: function(){textSectionMode('#c1'), expandCollapsedArea('#c2'), scrollToPosition('500');}" />
+                                    <div class="editMode button-row">
+                                        <button id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { end: 'oj-fwk-icon-caret-end oj-fwk-icon'} }, click: function(){textSectionMode('#c1'), expandCollapsedArea('#c2'), scrollToPosition('500');}"></button>
                                     </div>
                                 </form>
                             </div>
@@ -331,8 +337,8 @@
                                         </select>
                                     </div>
                                     <div class="textMode" data-bind="text: districts"></div>
-                                    <div class="editMode">
-                                        <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { start: 'fa fa-search'} }, click: function(){textSectionMode('#c2'), expandCollapsedArea('#c3'), scrollToPosition('500');}" />
+                                    <div class="editMode button-row">
+                                        <button id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { end: 'oj-fwk-icon-caret-end oj-fwk-icon'} }, click: function(){textSectionMode('#c2'), expandCollapsedArea('#c3'), scrollToPosition('500');}"></button>
                                     </div>
                                 </form>
                             </div>
@@ -344,8 +350,8 @@
                                         <a href="" class="textMode" data-bind="click: function(){editSectionMode('#c3, #c4, #c5, #c6'), collapseArea('#c4, #c5, #c6')}">Edit</a>
                                     </div>
                                     <div class="tbd"></div>
-                                    <div class="editMode">
-                                        <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { start: 'fa fa-search'} }, click: function(){textSectionMode('#c3'), expandCollapsedArea('#c4'), scrollToPosition('500');}" />
+                                    <div class="editMode button-row">
+                                        <button id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { end: 'oj-fwk-icon-caret-end oj-fwk-icon'} }, click: function(){textSectionMode('#c3'), expandCollapsedArea('#c4'), scrollToPosition('500');}"></button>
                                     </div>
                                 </form>
                             </div>
@@ -357,8 +363,8 @@
                                         <a href="" class="textMode" data-bind="click: function(){editSectionMode('#c4, #c5, #c6'), collapseArea('#c5, #c6')}">Edit</a>
                                     </div>
                                     <div class="tbd"></div>
-                                    <div class="editMode">
-                                        <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { start: 'fa fa-search'} }, click: function(){textSectionMode('#c4'), expandCollapsedArea('#c5'), scrollToPosition('500');}" />
+                                    <div class="editMode button-row">
+                                        <button id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { end: 'oj-fwk-icon-caret-end oj-fwk-icon'} }, click: function(){textSectionMode('#c4'), expandCollapsedArea('#c5'), scrollToPosition('500');}"></button>
                                     </div>
                                 </form>
                             </div>
@@ -370,8 +376,8 @@
                                         <a href="" class="textMode" data-bind="click: function(){editSectionMode('#c5, #c6'), collapseArea('#c6')}">Edit</a>
                                     </div>
                                     <div class="tbd"></div>
-                                    <div class="editMode">
-                                        <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { start: 'fa fa-search'} }, click: function(){textSectionMode('#c5'), expandCollapsedArea('#c6'), scrollToPosition('500');}" />
+                                    <div class="editMode button-row">
+                                        <button id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Continue', icons: { end: 'oj-fwk-icon-caret-end oj-fwk-icon'} }, click: function(){textSectionMode('#c5'), expandCollapsedArea('#c6'), scrollToPosition('500');}"></button>
                                     </div>
                                 </form>
                             </div>
@@ -383,7 +389,7 @@
                                         <a href="" class="textMode" data-bind="click: function(){editSectionMode('#c6')}">Edit</a>
                                     </div>
                                     <div class="tbd"></div>
-                                    <div class="editMode">
+                                    <div class="editMode button-row">
                                         <!--hardcoded employee link-->
                                         <a href="index.html?root=profile&emp=205&trueAddEmp" class="basic-btn-link">Finish</a>
                                     </div>
