--- a/OracleJETApplication/templates/partials/add-employee-modal/add-employee-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/add-employee-modal/add-employee-modal-large.tmpl.html
@@ -28,22 +28,22 @@
                             <h2>Getting Started <span class="fa fa-question custom-question-icon"></span></h2>
                             <form data-bind="submit: gettingStartedSearch">
                                 <div class="oj-row">
-                                    <div class="oj-col oj-sm-3">
+                                    <div class="oj-col oj-sm-12 oj-md-3">
                                         <label for="startFirstName">First Name</label>
                                         <input id="startFirstName" data-bind="ojComponent: {component: 'ojInputText', value: firstName}" />
                                     </div>
 
-                                    <div class="oj-col oj-sm-3">
+                                    <div class="oj-col oj-sm-12 oj-md-3">
                                         <label for="startLastName">Last Name</label>
                                         <input id="startLastName" data-bind="ojComponent: {component: 'ojInputText', value: lastName}" />
                                     </div>
 
-                                    <div class="oj-col oj-sm-3">
+                                    <div class="oj-col oj-sm-12 oj-md-3">
                                         <label for="startDob">Date of Birth</label>
                                         <input id="startDob" data-bind="ojComponent: {component: 'ojInputDate', value: dob}" />
                                     </div>
 
-                                    <div class="oj-col oj-sm-3">
+                                    <div class="oj-col oj-sm-12 oj-md-3">
                                         <label for="enterpriseLevel">Enterprise Level</label>
                                         <input id="enterpriseLevel" data-bind="ojComponent: {component: 'ojInputText', value: enterpriseLevel, readOnly: true}" />
                                     </div>
@@ -261,7 +261,7 @@
                                     <div class="addEmpAvailability">
                                         <div class="oj-row">
                                             <div class="custom-col-9 custom9-offset-1 oj-col"><strong>Week Total</strong></div>
-                                            <div class="oj-col custom-col-9">Sunday</div>
+                                            <div class="oj-col oj-sm-12 custom-col-9">Sunday</div>
                                             <div class="oj-col custom-col-9">Monday</div>
                                             <div class="oj-col custom-col-9">Tuesday</div>
                                             <div class="oj-col custom-col-9">Wednesday</div>
