--- a/OracleJETApplication/templates/profile.tmpl.html
+++ b/OracleJETApplication/templates/profile.tmpl.html
@@ -21,6 +21,11 @@
     </div>
 </div>
 <div class="justifyCenter">
+   <div class="oj-row addedNewEmpMessage">
+        <div class="oj-md-12 oj-col">
+            <span data-bind="text: personProfile().firstName + ' ' + personProfile().lastName"></span> has been successfully added!
+        </div>
+    </div>
     <div id="personaldetails" class="oj-row">
         <div class="oj-row">
             <div class="oj-sm-3 oj-col">
