--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -159,4 +159,5 @@
          <a data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
     </div>
 </div>
+</div>
 <div data-bind="template: {name: 'partials/employee-edit-modal/employee-edit-modal-large'}"></div>
