--- a/OracleJETApplication/templates/partials/employee-payroll-edit-modal/employee-payroll-edit-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-payroll-edit-modal/employee-payroll-edit-modal-large.tmpl.html
@@ -1,5 +1,8 @@
 <div style="display:none;" id="empPayrollDialog" title="Edit Employee Payroll Information" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'generalModal-dimensions'}}">
     <div class="oj-dialog-body">
+       <div class="oj-row">
+           <strong>HELLO FROM PAYROLL MODAL</strong>
+       </div>
         <div class="oj-row">
             <div class="oj-col oj-sm-12 oj-md-5 oj-lg-3 dialog-field-label">First Name</div>
             <div class="oj-col oj-sm-12 oj-md-7 oj-lg-3">
