--- a/OracleJETApplication/templates/profile/analytics/analytics-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/analytics/analytics-small.tmpl.html
@@ -1,7 +1,7 @@
 <div class="justifyCenter">
     <div class="oj-row">
         <div class="oj-col oj-sm-10">
-            <h2 id="currentPage" data-bind="text: label"></h2>
+            <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
         </div>
         <div class="oj-col oj-sm-2 oj-lg-text-align-end">
             <div data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Edit</div>
