--- a/OracleJETApplication/templates/profile/payroll/payroll-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/payroll/payroll-small.tmpl.html
@@ -2,6 +2,7 @@
     <div class="oj-row">
         <div class="oj-col oj-sm-8">
 <!--            <h2 id="currentPage" data-bind="text: label"></h2>-->
+         <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
         </div>
         <div class="oj-col oj-sm-4 oj-lg-text-align-end">
             <a data-bind="click: function(){$parent.handleOpen('#empDialog')}" style="line-height:39px;">Payroll Edit <i class="fa fa-pencil-square-o"></i></a>
