--- a/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-small.tmpl.html
@@ -1,8 +1,13 @@
 <div class="justifyCenter">
-    <div class="oj-row">
-        <div class="oj-col">
-            <div class="scheduleHeader"> Schedule <span class="timeOffRequest"><a data-bind="click:$parent.editRequestTimehandleOpen">Time Off Request</a></span></div>
-        </div> 
+        <div class="oj-row">
+        <div class="oj-col oj-sm-8">
+<!--            <h2 id="currentPage" data-bind="text: label"></h2>-->
+            <a style="line-height:39px;" data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
+
+        </div>
+        <div class="oj-col oj-sm-4 oj-lg-text-align-end">
+            <a style="line-height:39px;" data-bind="click:$parent.editRequestTimehandleOpen">Time Off Request</a>
+        </div>
     </div>
     <div class="oj-row">
         <div class="oj-col currentWeekHeaderArea">
