--- a/OracleJETApplication/templates/partials/add-employee-modal/add-employee-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/partials/add-employee-modal/add-employee-modal-small.tmpl.html
@@ -1,4 +1,6 @@
-<div style="display:none;" id="addEmpStatusDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', rootAttributes: {class: 'generalModal-dimensions'}, 'position': {'at': 'top'}}">
+<div style="display:none;" id="addEmpStatusDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', 
+            rootAttributes: {cstyle: 'width: 375px; height: 600px;'}, 
+            'position': {'at': 'top'}}">
     <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
         <span id="dialogTitleId" class="oj-dialog-title">
            <div><span class="fa fa-plus"></span> Add Employee Modal</div>
