--- a/OracleJETApplication/templates/partials/employee-hire-status-modal/employee-hire-status-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-hire-status-modal/employee-hire-status-modal-small.tmpl.html
@@ -1,6 +1,6 @@
-<div style="display:none;" id="hireStatusDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', 
+<div style="display:none;" id="hireStatusDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', dragAffordance: 'none',
                   rootAttributes: {class: 'generalModal-dimensions'},
-                  'position': {'my': 'start bottom', 'at': 'end+14 top'},}">
+                  'position': {'my': 'right center', 'at': 'left center'}}">
    <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
         <span id="dialogTitleId" class="oj-dialog-title">
            <div>Hire Status Modal</div>
